force-app/main/default/objects/Funnel_Conversion_Cycle__c/Funnel_Conversion_Cycle__c.object-meta.xml
<CustomObject>
    <description>These are records that have relationships to Salesforce standard Leads, Contacts, Accounts and Opportunities. These records are what is used in scaleMatters application.</description>
    <label>Funnel Conversion Cycle</label>
    <nameField>
        <displayFormat>sM_FCC# - {00000000}</displayFormat>
        <label>Funnel Conversion Cycle Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Funnel Conversion Cycles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>