force-app/main/default/objects/Funnel_Conversion_Cycle__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Account record this record is linked to.</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>scaleMatters_Records</relationshipName>
    <type>Lookup</type>
</CustomField>