force-app/main/default/objects/Funnel_Conversion_Cycle__c/fields/Account_Discard__c.field-meta.xml
<CustomField>
    <fullName>Account_Discard__c</fullName>
    <defaultValue>false</defaultValue>
    <description
  >Used to identify if Account should be removed from scaleMatters</description>
    <label>Account Discard</label>
    <type>Checkbox</type>
</CustomField>