force-app/main/default/objects/Funnel_Conversion_Cycle__c/fields/Account_Discard_f__c.field-meta.xml
<CustomField>
    <fullName>Account_Discard_f__c</fullName>
    <formula>Account__r.Account_Discard__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Discard F</label>
    <type>Checkbox</type>
</CustomField>