force-app/main/default/objects/Funnel_Conversion_Cycle__c/fields/Account_Last_Activity_Date__c.field-meta.xml
<CustomField>
    <fullName>Account_Last_Activity_Date__c</fullName>
    <description
  >Used in copy Account&apos;s Last Activity as a value to reference.</description>
    <formula>IF(
    NOT(ISBLANK(Account__c)),
    Account__r.LastActivityDate,
    NULL
)</formula>
    <label>Account Last Activity Date</label>
    <type>Date</type>
</CustomField>