force-app/main/default/objects/Funnel_Conversion_Cycle__c/fields/Account_Last_Modified_Date__c.field-meta.xml
<CustomField>
    <fullName>Account_Last_Modified_Date__c</fullName>
    <description
  >Used a reference point to see the Last Modified Date to the related Account.</description>
    <formula>Account__r.LastModifiedDate</formula>
    <label>Account Last Modified Date</label>
    <type>DateTime</type>
</CustomField>