force-app/main/default/objects/Funnel_Conversion_Cycle__c/fields/Account_Lead_Source__c.field-meta.xml
<CustomField>
    <fullName>Account_Lead_Source__c</fullName>
    <description>Used to reference Account&apos;s Lead Source value</description>
    <formula>IF(
    NOT(ISBLANK(Account__c)),
    TEXT(Account__r.AccountSource),
    NULL
)</formula>
    <label>Account Lead Source</label>
    <type>Text</type>
</CustomField>