force-app/main/default/objects/Funnel_Conversion_Cycle__c/fields/Account_Owner_Role__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner_Role__c</fullName>
    <description
  >Used to populate the Owner Role of the Account when record is created.</description>
    <label>Account Owner Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>