force-app/main/default/objects/Funnel_Conversion_Cycle__c/fields/Account_Owner_Role_f__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner_Role_f__c</fullName>
    <formula>Account__r.Record_Owner_Role__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Owner Role F</label>
    <type>Text</type>
</CustomField>