force-app/main/default/objects/Funnel_Conversion_Cycle__c/fields/Account_Owner_SafeId__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner_SafeId__c</fullName>
    <description>Used to provide 18 digit ID of Account Owner</description>
    <formula>IF(
    NOT(ISBLANK(Account__c)),
    CASESAFEID(Account__r.OwnerId),
    NULL
)</formula>
    <label>Account Owner SafeId</label>
    <type>Text</type>
</CustomField>