force-app/main/default/objects/Funnel_Conversion_Cycle__c/fields/Account_Record_SafeId__c.field-meta.xml
<CustomField>
    <fullName>Account_Record_SafeId__c</fullName>
    <description>Used to provide unique ID for Account + Record</description>
    <formula>IF(
    NOT(ISBLANK(Account__c)),
    Account_SafeId__c &amp;&quot;-&quot;&amp; scaleMatters_Record_SafeId__c,
    &quot;&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account+Record SafeId</label>
    <type>Text</type>
</CustomField>