force-app/main/default/objects/Funnel_Conversion_Cycle__c/fields/Account_SafeId__c.field-meta.xml
<CustomField>
    <fullName>Account_SafeId__c</fullName>
    <description
  >Used to populated the 18 digit ID vs 15 digit for API access</description>
    <formula>IF(
    NOT(ISBLANK(Account__c)),
    CASESAFEID(Account__r.Id),
    NULL
)</formula>
    <label>Account SafeId</label>
    <type>Text</type>
</CustomField>