force-app/main/default/objects/Funnel_Conversion_Cycle__c/fields/Account_Valid__c.field-meta.xml
<CustomField>
    <fullName>Account_Valid__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to identify if Account record should be in scaleMatters</description>
    <label>Account Valid</label>
    <type>Checkbox</type>
</CustomField>