force-app/main/default/objects/Funnel_Conversion_Cycle__c/fields/Account_Valid_f__c.field-meta.xml
<CustomField>
    <fullName>Account_Valid_f__c</fullName>
    <formula>Account__r.Valid_Record__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Valid</label>
    <type>Checkbox</type>
</CustomField>