force-app/main/default/objects/Funnel_Conversion_Cycle__c/fields/Business_Unit_ID__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit_ID__c</fullName>
    <description
  >Used the GUID for scaleMatters to run queries off of Business Unit values</description>
    <label>Business Unit ID</label>
    <length>32</length>
    <type>Text</type>
</CustomField>