force-app/main/default/objects/Funnel_Conversion_Cycle__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Contact record this record is linked to.</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>scaleMatters_Records</relationshipName>
    <type>Lookup</type>
</CustomField>