force-app/main/default/objects/Funnel_Conversion_Cycle__c/fields/Contact_Discard__c.field-meta.xml
<CustomField>
    <fullName>Contact_Discard__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to identify if Contact should be removed from scaleMatters</description>
    <label>Contact Discard</label>
    <type>Checkbox</type>
</CustomField>