force-app/main/default/objects/Funnel_Conversion_Cycle__c/fields/Contact_Discard_f__c.field-meta.xml
<CustomField>
    <fullName>Contact_Discard_f__c</fullName>
    <formula>Contact__r.Contact_Discard__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Discard</label>
    <type>Checkbox</type>
</CustomField>