force-app/main/default/objects/Funnel_Conversion_Cycle__c/fields/Contact_Last_Activity_Date__c.field-meta.xml
<CustomField>
    <fullName>Contact_Last_Activity_Date__c</fullName>
    <description>Used in copy Contact&apos;s Last Activity as a value to reference.</description>
    <formula>IF(
    NOT(ISBLANK(Contact__c)),
    Contact__r.LastActivityDate,
    NULL
)</formula>
    <label>Contact Last Activity Date</label>
    <type>Date</type>
</CustomField>