force-app/main/default/objects/Funnel_Conversion_Cycle__c/fields/Contact_Last_Modified_Date__c.field-meta.xml
<CustomField>
    <fullName>Contact_Last_Modified_Date__c</fullName>
    <description
  >Used a reference point to see the Last Modified Date to the related Contact.</description>
    <formula>Contact__r.LastModifiedDate</formula>
    <label>Contact Last Modified Date</label>
    <type>DateTime</type>
</CustomField>