force-app/main/default/objects/Funnel_Conversion_Cycle__c/fields/Contact_Lead_Source__c.field-meta.xml
<CustomField>
    <fullName>Contact_Lead_Source__c</fullName>
    <description
  >Used to reference Contact&apos;s Lead Source value</description>
    <formula>IF(
    NOT(ISBLANK(Contact__c)),
    TEXT(Contact__r.LeadSource),
    NULL
)</formula>
    <label>Contact Lead Source</label>
    <type>Text</type>
</CustomField>