force-app/main/default/objects/Funnel_Conversion_Cycle__c/fields/Contact_Owner_Role__c.field-meta.xml
<CustomField>
    <fullName>Contact_Owner_Role__c</fullName>
    <description
  >Used to populate the Owner Role of the Contact when record is created.</description>
    <label>Contact Owner Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>