force-app/main/default/objects/Funnel_Conversion_Cycle__c/fields/Contact_Owner_Role_f__c.field-meta.xml
<CustomField>
    <fullName>Contact_Owner_Role_f__c</fullName>
    <formula>Contact__r.Record_Owner_Role__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Owner Role</label>
    <type>Text</type>
</CustomField>