force-app/main/default/objects/Funnel_Conversion_Cycle__c/fields/Contact_Owner_SafeId__c.field-meta.xml
<CustomField>
    <fullName>Contact_Owner_SafeId__c</fullName>
    <description>Used to provide 18 digit ID of Contact Owner</description>
    <formula>IF(
    NOT(ISBLANK(Contact__c)),
    CASESAFEID(Contact__r.OwnerId),
    NULL
)</formula>
    <label>Contact Owner SafeId</label>
    <type>Text</type>
</CustomField>