force-app/main/default/objects/Funnel_Conversion_Cycle__c/fields/Contact_Record_SafeId__c.field-meta.xml
<CustomField>
    <fullName>Contact_Record_SafeId__c</fullName>
    <description>Used to provide unique ID for Contact + Record</description>
    <formula>IF(
    NOT(ISBLANK(Contact__c)),
    Contact_SafeId__c &amp;&quot;-&quot;&amp; scaleMatters_Record_SafeId__c,
    &quot;&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact+Record SafeId</label>
    <type>Text</type>
</CustomField>