force-app/main/default/objects/Funnel_Conversion_Cycle__c/fields/Contact_SafeId__c.field-meta.xml
<CustomField>
    <fullName>Contact_SafeId__c</fullName>
    <description>Used to provide 18 digit id for Contact</description>
    <formula>IF(
    NOT(ISBLANK(Contact__c)),
    CASESAFEID(Contact__r.Id),
    NULL
)</formula>
    <label>Contact SafeId</label>
    <type>Text</type>
</CustomField>