force-app/main/default/objects/Funnel_Conversion_Cycle__c/fields/Contact_Valid__c.field-meta.xml
<CustomField>
    <fullName>Contact_Valid__c</fullName>
    <defaultValue>false</defaultValue>
    <description
  >Used to identify if Contact record should be in scaleMatters</description>
    <label>Contact Valid</label>
    <type>Checkbox</type>
</CustomField>