force-app/main/default/objects/Funnel_Conversion_Cycle__c/fields/Contact_Valid_f__c.field-meta.xml
<CustomField>
    <fullName>Contact_Valid_f__c</fullName>
    <formula>Contact__r.Valid_Record__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Valid</label>
    <type>Checkbox</type>
</CustomField>