force-app/main/default/objects/Funnel_Conversion_Cycle__c/fields/Converted_Account_SafeId__c.field-meta.xml
<CustomField>
    <fullName>Converted_Account_SafeId__c</fullName>
    <description>Used to find Safe ID for the Account this Lead was converted to.</description>
    <formula>IF(
    NOT(ISBLANK(Lead__c)),
    CASESAFEID(Lead__r.ConvertedAccountId),
    NULL
)</formula>
    <label>Converted Account SafeId</label>
    <type>Text</type>
</CustomField>