force-app/main/default/objects/Funnel_Conversion_Cycle__c/fields/Converted_Contact_SafeId__c.field-meta.xml
<CustomField>
    <fullName>Converted_Contact_SafeId__c</fullName>
    <description
  >Used to find Safe ID for the Contact this Lead was converted to.</description>
    <formula>IF(
    NOT(ISBLANK(Lead__c)),
    CASESAFEID(Lead__r.ConvertedContactId),
    NULL
)</formula>
    <label>Converted Contact SafeId</label>
    <type>Text</type>
</CustomField>