force-app/main/default/objects/Funnel_Conversion_Cycle__c/fields/Converted_Opportunity_SafeId__c.field-meta.xml
<CustomField>
    <fullName>Converted_Opportunity_SafeId__c</fullName>
    <description>Used to find Safe ID for the Opportunity this Lead was converted to.</description>
    <formula>IF(
    NOT(ISBLANK(Lead__c)),
    CASESAFEID(Lead__r.ConvertedOpportunityId),
    NULL
)</formula>
    <label>Converted Opportunity SafeId</label>
    <type>Text</type>
</CustomField>