force-app/main/default/objects/Funnel_Conversion_Cycle__c/fields/Created_from_Object__c.field-meta.xml
<CustomField>
    <fullName>Created_from_Object__c</fullName>
    <description>Which object created the scaleMatters record.</description>
    <label>Created from Object</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Related_Object</valueSetName>
    </valueSet>
</CustomField>