force-app/main/default/objects/Funnel_Conversion_Cycle__c/fields/Created_Rating__c.field-meta.xml
<CustomField>
    <fullName>Created_Rating__c</fullName>
    <description
  >Picklist used to state what the rating value was upon creation of the Lead.</description>
    <label>Created Rating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Created_Rating</valueSetName>
    </valueSet>
</CustomField>