force-app/main/default/objects/Funnel_Conversion_Cycle__c/fields/Customer_Size_View__c.field-meta.xml
<CustomField>
    <fullName>Customer_Size_View__c</fullName>
    <description>Operational views segmented by off Size for scaleMatters</description>
    <label>Customer Size View</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Size_View</valueSetName>
    </valueSet>
</CustomField>