force-app/main/default/objects/Funnel_Conversion_Cycle__c/fields/Customer_Type_View__c.field-meta.xml
<CustomField>
    <fullName>Customer_Type_View__c</fullName>
    <description
  >Operational views segmented by off Customer Type for scaleMatters</description>
    <label>Customer Type View</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Customer_Type_View</valueSetName>
    </valueSet>
</CustomField>