force-app/main/default/objects/Funnel_Conversion_Cycle__c/fields/Customer_Type_View_ID__c.field-meta.xml
<CustomField>
    <fullName>Customer_Type_View_ID__c</fullName>
    <description>Used the GUID for scaleMatters to run queries off of Customer Type View values</description>
    <label>Customer Type View ID</label>
    <length>32</length>
    <type>Text</type>
</CustomField>