force-app/main/default/objects/Funnel_Conversion_Cycle__c/fields/Cycle_Attempt__c.field-meta.xml
<CustomField>
    <fullName>Cycle_Attempt__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Count of the number of a times a record has been attempted to be reworked.</description>
    <label>Cycle Attempt</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>