force-app/main/default/objects/Funnel_Conversion_Cycle__c/fields/Cycle_Closed_Date__c.field-meta.xml
<CustomField>
    <fullName>Cycle_Closed_Date__c</fullName>
    <description>Date when the record was set to Cycle Closed = TRUE.</description>
    <label>Cycle Closed Date</label>
    <type>Date</type>
</CustomField>