force-app/main/default/objects/Funnel_Conversion_Cycle__c/fields/Cycle_Object__c.field-meta.xml
<CustomField>
    <fullName>Cycle_Object__c</fullName>
    <description>Used to tell object the cycle type is related to.</description>
    <label>Cycle Object</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Related_Object</valueSetName>
    </valueSet>
</CustomField>