force-app/main/default/objects/Funnel_Conversion_Cycle__c/fields/Fetch_Funnel_Group__c.field-meta.xml
<CustomField>
    <fullName>Fetch_Funnel_Group__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fetch Funnel Group</label>
    <type>Checkbox</type>
</CustomField>