force-app/main/default/objects/Funnel_Conversion_Cycle__c/fields/IsGhosted__c.field-meta.xml
<CustomField>
    <fullName>IsGhosted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to tell if an opportunity is Closed Lost Ghosted</description>
    <label>IsGhosted</label>
    <type>Checkbox</type>
</CustomField>