force-app/main/default/objects/Funnel_Conversion_Cycle__c/fields/Last_Active_Stage__c.field-meta.xml
<CustomField>
    <fullName>Last_Active_Stage__c</fullName>
    <description>Used to state what is/was the last stage an opportunity reached before closing.</description>
    <label>Last Active Stage</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>