force-app/main/default/objects/Funnel_Conversion_Cycle__c/fields/Lead_0_Date__c.field-meta.xml
<CustomField>
    <fullName>Lead_0_Date__c</fullName>
    <description>Date when Rating = Lead 0</description>
    <label>Lead 0 Date</label>
    <type>Date</type>
</CustomField>