force-app/main/default/objects/Funnel_Conversion_Cycle__c/fields/Lead_2_Bypass__c.field-meta.xml
<CustomField>
    <fullName>Lead_2_Bypass__c</fullName>
    <defaultValue>0</defaultValue>
    <description
  >Used to tell if a Lead bypassed the Lead 2 Rating or not.</description>
    <label>Lead 2 Bypass</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>