force-app/main/default/objects/Funnel_Conversion_Cycle__c/fields/Lead_2_Date__c.field-meta.xml
<CustomField>
    <fullName>Lead_2_Date__c</fullName>
    <description>Date when Lead Rating = Lead 2</description>
    <label>Lead 2 Date</label>
    <type>Date</type>
</CustomField>