force-app/main/default/objects/Funnel_Conversion_Cycle__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Lead record this record is linked to.</description>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipName>scaleMatters_Records</relationshipName>
    <type>Lookup</type>
</CustomField>