force-app/main/default/objects/Funnel_Conversion_Cycle__c/fields/Lead_Discard__c.field-meta.xml
<CustomField>
    <fullName>Lead_Discard__c</fullName>
    <defaultValue>false</defaultValue>
    <description
  >Used to identify if Lead should be removed from scaleMatters</description>
    <label>Lead Discard</label>
    <type>Checkbox</type>
</CustomField>