force-app/main/default/objects/Funnel_Conversion_Cycle__c/fields/Lead_Last_Activity_Date__c.field-meta.xml
<CustomField>
    <fullName>Lead_Last_Activity_Date__c</fullName>
    <description
  >Used in copy Lead&apos;s Last Activity as a value to reference.</description>
    <formula>IF(
    NOT(ISBLANK(Lead__c)),
    Lead__r.LastActivityDate,
    NULL
)</formula>
    <label>Lead Last Activity Date</label>
    <type>Date</type>
</CustomField>