force-app/main/default/objects/Funnel_Conversion_Cycle__c/fields/Lead_Last_Modified_Date__c.field-meta.xml
<CustomField>
    <fullName>Lead_Last_Modified_Date__c</fullName>
    <description
  >Used a reference point to see the Last Modified Date to the related Lead.</description>
    <formula>Lead__r.LastModifiedDate</formula>
    <label>Lead Last Modified Date</label>
    <type>DateTime</type>
</CustomField>