force-app/main/default/objects/Funnel_Conversion_Cycle__c/fields/Lead_Lead_Source__c.field-meta.xml
<CustomField>
    <fullName>Lead_Lead_Source__c</fullName>
    <description>Used to reference Lead&apos;s Lead Source value</description>
    <formula>IF(
    NOT(ISBLANK(Lead__c)),
    TEXT(Lead__r.LeadSource),
    NULL
)</formula>
    <label>Lead Lead Source</label>
    <type>Text</type>
</CustomField>