force-app/main/default/objects/Funnel_Conversion_Cycle__c/fields/Lead_Owner_Role__c.field-meta.xml
<CustomField>
    <fullName>Lead_Owner_Role__c</fullName>
    <description>Used to populate the Owner Role of the Lead when record is created.</description>
    <label>Lead Owner Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>