force-app/main/default/objects/Funnel_Conversion_Cycle__c/fields/Lead_Owner_Role_f__c.field-meta.xml
<CustomField>
    <fullName>Lead_Owner_Role_f__c</fullName>
    <formula>Lead__r.Record_Owner_Role__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Owner Role F</label>
    <type>Text</type>
</CustomField>