force-app/main/default/objects/Funnel_Conversion_Cycle__c/fields/Lead_Owner_SafeId__c.field-meta.xml
<CustomField>
    <fullName>Lead_Owner_SafeId__c</fullName>
    <description>Used to provide 18 digit ID of Lead Owner</description>
    <formula>IF(
    NOT(ISBLANK(Lead__c)),
    CASESAFEID(Lead__r.OwnerId),
    NULL
)</formula>
    <label>Lead Owner SafeId</label>
    <type>Text</type>
</CustomField>