force-app/main/default/objects/Funnel_Conversion_Cycle__c/fields/Lead_Record_SafeId__c.field-meta.xml
<CustomField>
    <fullName>Lead_Record_SafeId__c</fullName>
    <description>Used to provide unique ID for Lead + Record</description>
    <formula>IF(
    NOT(ISBLANK(Lead__c)),
    Lead_SafeId__c &amp;&quot;-&quot;&amp; scaleMatters_Record_SafeId__c,
    &quot;&quot;
)</formula>
    <label>Lead+Record SafeId</label>
    <type>Text</type>
</CustomField>