force-app/main/default/objects/Funnel_Conversion_Cycle__c/fields/Lead_SafeId__c.field-meta.xml
<CustomField>
    <fullName>Lead_SafeId__c</fullName>
    <description>Used to populated the 18 digit ID vs 15 digit for API access.</description>
    <formula>IF(
    NOT(ISBLANK(Lead__c)),
    CASESAFEID(Lead__r.Id),
    NULL
)</formula>
    <label>Lead SafeId</label>
    <type>Text</type>
</CustomField>