force-app/main/default/objects/Funnel_Conversion_Cycle__c/fields/Lead_Valid__c.field-meta.xml
<CustomField>
    <fullName>Lead_Valid__c</fullName>
    <defaultValue>false</defaultValue>
    <description
  >Used to identify if Lead record should be in scaleMatters</description>
    <label>Lead Valid</label>
    <type>Checkbox</type>
</CustomField>