force-app/main/default/objects/Funnel_Conversion_Cycle__c/fields/Lead_Valid_f__c.field-meta.xml
<CustomField>
    <fullName>Lead_Valid_f__c</fullName>
    <formula>Lead__r.Valid_Record__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Valid F</label>
    <type>Checkbox</type>
</CustomField>