force-app/main/default/objects/Funnel_Conversion_Cycle__c/fields/Meeting_Date__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Date__c</fullName>
    <description
  >Used to roll-up the first date that a meeting will take place.</description>
    <label>Meeting Date</label>
    <type>Date</type>
</CustomField>