force-app/main/default/objects/Funnel_Conversion_Cycle__c/fields/Meeting_Occurred__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Occurred__c</fullName>
    <description
  >Quick way to tell if a Meeting has occurred or not. 0 means did not occur and 1 means it did occur.</description>
    <formula>IF(
   AND(
       NOT(ISBLANK( Meeting_Date__c)),
       ISPICkVAL( Meeting_Disposition__c , &quot;Completed&quot;)
    ),
    1, 0
)</formula>
    <label>Meeting Occurred</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>