force-app/main/default/objects/Funnel_Conversion_Cycle__c/fields/Meeting_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Outcome__c</fullName>
    <description
  >Used as detailed field to determine overall meeting result.</description>
    <label>Meeting Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Meeting_Outcome</valueSetName>
    </valueSet>
</CustomField>