force-app/main/default/objects/Funnel_Conversion_Cycle__c/fields/Meeting_Source__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Source__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used to pull down who set the meeting on the Lead or Contact.</description>
    <label>Meeting Source</label>
    <referenceTo>User</referenceTo>
    <relationshipName>scaleMatters_Leads_Meeting_Source_tbb</relationshipName>
    <type>Lookup</type>
</CustomField>