force-app/main/default/objects/Funnel_Conversion_Cycle__c/fields/New_Recycle_Mapped_Date__c.field-meta.xml
<CustomField>
    <fullName>New_Recycle_Mapped_Date__c</fullName>
    <label>New Recycle Mapped Date</label>
    <type>DateTime</type>
</CustomField>