force-app/main/default/objects/Funnel_Conversion_Cycle__c/fields/Old_Recycle_Mapped_Date__c.field-meta.xml
<CustomField>
    <fullName>Old_Recycle_Mapped_Date__c</fullName>
    <label>Old Recycle Mapped Date</label>
    <type>DateTime</type>
</CustomField>