force-app/main/default/objects/Funnel_Conversion_Cycle__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Opportunity record this record is linked to.</description>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>scaleMatters_Records</relationshipName>
    <type>Lookup</type>
</CustomField>